<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_account_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_profile"
        app:civ_border_color="#00000000"
        app:civ_border_width="1dp" />

    <TextView
        android:id="@+id/tv_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="16dp"
        android:text="@string/username" />

    <TextView
        android:id="@+id/tv_account_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:text="@string/useremail" />

    <Button
        android:id="@+id/btn_account_add_photo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_change"
        android:gravity="center"
        android:text="@string/add_profile_photo"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/boundary" />

    <Button
        android:id="@+id/btn_account_sign"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_change"
        android:gravity="center"
        android:text="로그인 / 로그아웃"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/boundary" />

</LinearLayout>